css/styles.css
/* CSS Reset */
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Body styling */

body {
    background-color: hsl(42, 100%, 84%);
    display: flex;
    flex-direction: column;
}

/* Logo */

#top-logo {
    /* Size */
    max-height: 20vh;

    /* Centered */
    display: block;
    margin: 0 auto;
    padding-top: 3vh;
}

/* Navigation menu */
#nav-menu menu {
    /* Positioning */
    margin-top: 3vh;
    margin-bottom: 2vh;

    column-gap: 2vh;
    justify-content: center;

    /* Menu display */
    display: flex;
    list-style: none;
}

.nav-item {
    /* Box dimenions */
    padding: 1vh;

    /* Box styling */
    background-color: hsl(32, 98%, 75%);
    outline: 0.1vh solid hsl(0, 55%, 46%);
    border-radius: 30px;

    /* Transition */
    transition: all 0.1s ease-out;
}

.nav-item>a {
    /* Font */
    font-family: 'Dosis', sans-serif;
    font-weight: 700;
    color: hsl(0, 55%, 46%);
    text-decoration: none;
}

.nav-item:hover {
    /* Hover transformation */
    background-color: hsl(32, 57%, 64%);
    outline: 0.2vh solid hsl(0, 55%, 46%);
}

/* Main content */

main {
    /* Dimensions */
    overflow: auto;
    max-width: 1080px;
    margin: 0 auto;
    height: 55vh;
    width: 100vw;
    justify-content: center;
}

#products-article {
    /* Animation */
    animation: showarticle 0.5s ease forwards;
    opacity: 0;

    /* Positioning and dimensions */
    position: absolute;
    max-width: 1080px;
    width: 100vw;


    /* Display */
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    gap: 1vh;
}

#promotion {
    /* Dimensions */
    padding: 0.5vh;

    /* Display */
    display: flex;
    flex-direction: row;
    justify-content: center;
}

#promotion img {
    /* Dimensions */
    max-height: 10vh;
}

#text-area {
    /* Display */
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#text-area p, h1 {
    /* Dimensions */
    max-width: 100%;
    margin-left: 0.5vh;
    vertical-align: middle;

    /* Font */
    font-family: 'Dosis';
    font-size: 2vh;
}

#text-area h1 {
    /* Font */
    font-weight: 700;
    font-size: 3vh;
    color: hsl(0, 55%, 46%);
}

#text {
    /* Font */
    font-family: 'Roboto', sans-serif;
    text-align: justify;
}

#portfolio {
    /* Dimensions */
    max-width: 100%;
    
    /* Flex display */
    display: flex;
    justify-content: center;
    column-gap: 3vh;
}

@media only screen and (max-width: 1079px) {
    main {
        height: 215vh;
    }
    
    #portfolio {
        max-width: calc(20vh + 4rem);
        flex-direction: column;
        flex-basis: 55vh;
        row-gap: 1rem;
        margin: 0 auto;
    }

    .project {
        max-width: calc(20vh + 4rem);
    }
}

.project {
    border: 1px solid;
    border-radius: 30px;
    font-size: 12px;
}

.project:hover {
    background-color: rgb(255, 224, 151);
}

.project img {
    /* Dimensions */
    max-width: 20vh;
    margin: 2rem;
    margin-bottom: 0 !important;

    /* Border */
    border-radius: 30px;
}

.project p {
    /* Dimensions */
    
    margin-left: 2rem;
    margin-bottom: 1rem;
    max-width: 20vh;

    /* Font */
    font-family: 'Dosis';

    /* Positioning */
    text-align: center;
}

#contact-article {
    /* Animation */
    animation: showarticle 0.5s ease paused forwards;
    opacity: 0;

    /* Positioning and dimensions */
    position: absolute;
    max-width: 1080px;
    width: 100vw;

    /* Display */
    display: flex;
    flex-direction: row;
    justify-content: center;
}

#contact-article div {
    padding: 0.5vh;
}

#contact-article label {
    /* Font */
    font-family: 'Dosis';
    font-weight: 700;
}

#about-article {
    /* Animation */
    animation: showarticle 0.5s ease paused forwards;
    opacity: 0;

    /* Positioning and dimensions */
    position: absolute;
    max-width: 1080px;
}

#about-article p {
    /* Font */
    font-family: 'Roboto';
    text-align: justify;

    /* Dimensions */
    margin-left: 1rem;
    margin-right: 1rem;
}

#about-article p ~ p {
    /* Dimensions */
    margin-top: 0.5rem
}

@keyframes showarticle {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

/* Footer */

footer {
    /* Display */
    display: flex;
    flex-direction: row;
    justify-content: center;
}

footer img {
    /* Dimensions */
    max-width: 50px;
    margin: 0 25px;
}

footer p {
    /* Font */
    font-family: 'Dosis';
    text-align: center;
    line-height: 100px;

    /* Dimensions */
    width: auto;
}

